doc(viewer): some minor fixes after review

--- a/src/viewer/plugins/i18n.md
+++ b/src/viewer/plugins/i18n.md
@@ -31,7 +31,7 @@ const myPlugin = {
 
 ## Set the viewer locale
 
-To set the viewer local, user the `locale` property of the `makeBIMDataViewer` configuration object:
+To set the viewer local, use the `locale` property of the `makeBIMDataViewer` configuration object:
 
 ```javascript
 const viewer = makeBIMDataViewer({
