Fix some examples in viewer doc

--- a/src/viewer/plugins/i18n.md
+++ b/src/viewer/plugins/i18n.md
@@ -4,17 +4,17 @@ It is possible to add internationalization for plugins.
 
 ## Translate text
 
-To add i18n files, use the `i18n` plugin property. To translate a text, use `$t("plugin-name.text-key")`.
+To add i18n files, use the `i18n` plugin property. To translate a text, use `$t("pluginName.textKey")`.
 
 Example:
 
 ```javascript
 const EN = {
-  "some-text": "en translation",
+  "textKey": "This text is in english.",
 };
 
 const FR = {
-  "some-text": "fr traduction",
+  "textKey": "Ce texte est en français",
 };
 
 const myPlugin = {
@@ -24,14 +24,14 @@ const myPlugin = {
     fr: FR,
   },
   component: {
-    template: "<div>{{$t('myPlugin.some-text')}}</div>"
+    template: "<div>{{ $t('myPlugin.textKey') }}</div>"
   }
 };
 ```
 
 ## Set the viewer locale
 
-To set the viewer local, use the `locale` property of the `makeBIMDataViewer` configuration object:
+To set the viewer local, use the `locale` property of the [makeBIMDataViewer](/viewer/reference/makeBIMDataViewer.html) configuration object:
 
 ```javascript
 const viewer = makeBIMDataViewer({
@@ -40,5 +40,8 @@ const viewer = makeBIMDataViewer({
 ```
 
 The available locales are:
-- French : fr (default)
+- French: fr (default)
 - English: en
+- Spanish: es
+- German: de
+- Italian: it
