fix typo in default language

--- a/src/viewer/plugins/i18n.md
+++ b/src/viewer/plugins/i18n.md
@@ -40,8 +40,8 @@ const viewer = makeBIMDataViewer({
 ```
 
 The available locales are:
-- French: fr (default)
-- English: en
+- English: en (default)
+- French: fr 
 - Spanish: es
 - German: de
 - Italian: it
